# ccds-lecture

./: Makefile  README.md  environment.yml  pyproject.toml
ccds_lecture/: __init__.py  dataset.py  features.py  plots.py
ccds_lecture/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
